Fix intro text align

--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ time {
 .intro {
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 5px;
     position: absolute;
     left: 80px;
@@ -114,7 +115,7 @@ article p {
 
 @media screen and (max-width: 600px) {
     .banner .intro {
-        left: 15%;
+        left: 20%;
     }
 
     .intro h1 {
